2012-05-09  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* patches/remove_multicatch_in_testrsa.patch:
	Make the test TestRSA compatible with JDK6 syntax.
	* Makefile.am: Updated.

2012-05-09  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(add-nss): Copy nss.cfg to j2re-image as well.
	(clean-add-nss): Remove nss.cfg from j2re-image.
	(add-nss-debug): Same as for add-nss.
	(clean-add-nss-debug): Same as for clean-add-nss.
	(add-nss-ecj): Same as for add-nss.
	(clean-add-nss-ecj): Same as for clean-add-nss.

2012-05-04  Andrew John Hughes  <ahughes@redhat.com>

	Backport cryptography tests from 7.
	* Makefile.am: Add new patches.
	* patches/generalise_crypto_tests.patch:
	IcedTea7 patch to generalise crypto tests.
	* patches/openjdk/7088989-ucrypto_tests.patch:
	Backport of 7088989.
	* patches/remove-gcm-test.patch:
	Remove GCM testing as not part of 6.
	* patches/skip_wrap_mode.patch:
	IcedTea7 patch to skip wrap mode tests when mode
	is not available.

2012-04-20  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* NEWS: Mention bugfix PR797 (the same as bugfig RH789154).

2012-03-29  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* patches/revert-6885123.patch: Removed to fix
	  RH bug #789154 - javac error messages no longer
	  contain the full path to the offending file.
	* NEWS: Mention bugfix.
	* Makefile.am: Updated.

2012-03-27  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* patches/openjdk/6792400-Avoid_loading_Normalizer_resources.patch:
	Backport of: 6792400: Avoid loading of Normalizer resources
	for simple uses
	* NEWS: Mention backport.
	* Makefile.am: Updated

2012-03-21  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* patches/apache-xml-internal-fix-bug-38655.patch:
	Added patch which fixes the Apache XML security bug #38655
	* Makefile.am: Updated

2012-03-21  Pavel Tisnovsky  <ptisnovs@redhat.com>

	PR881: Sign tests (wsse.policy.basic) failures with OpenJDK6
	* Makefile.am: Updated
	* patches/idresolver_fix.patch: added patch for a class
	IdResolver.
