@@ -1,7 +1,7 @@
 #!/usr/bin/perl -w
 use strict;
 use constant NO_DUP_ARGS => qw(-source -target -d -encoding);
-use constant STRIP_ARGS => qw(-Werror -implicit:none);
+use constant STRIP_ARGS => qw(-Werror -implicit:none -J-Xbootclasspath/p:);
 
 my $ECJ_WARNINGS="-nowarn";
 
@@ -31,24 +31,34 @@ sub gen_ecj_opts
 	splice @new_args, $_, 1 for @indices;
     }
 
-    return @new_args;
+    return \@new_args;
+}
+
+sub split_vm_args
+{
+    my @new_args = @{$_[0]};
+
+    my @vm_args = map { substr $_, 2 } grep $_ =~ /^-J/, @new_args;
+    my @javac_args = grep $_ !~ /^-J/, @new_args;
+
+    return (\@vm_args, \@javac_args);
 }
 
 if ( -e "@abs_top_builddir@/native-ecj" )
 {
-    my @ecj_args = gen_ecj_opts( \@ARGV );
-    exec '@abs_top_builddir@/native-ecj', @ecj_parms, @ecj_args ;
+    my $ecj_args = gen_ecj_opts( \@ARGV );
+    exec '@abs_top_builddir@/native-ecj', @ecj_parms, @$ecj_args ;
 }
 elsif ( -e "@ECJ_JAR@" )
 {
-    my @ecj_args = gen_ecj_opts( \@ARGV );
+    my ($vm_args, $javac_args) = split_vm_args (gen_ecj_opts( \@ARGV ));
     my @CLASSPATH = ('@ECJ_JAR@');
     push @CLASSPATH, split /:/, $ENV{"CLASSPATH"} if exists $ENV{"CLASSPATH"};
     $ENV{"CLASSPATH"} = join ':', @CLASSPATH;
-    exec '@JAVA@', 'org.eclipse.jdt.internal.compiler.batch.Main', @ecj_parms, @ecj_args;
+    exec '@JAVA@', @$vm_args, 'org.eclipse.jdt.internal.compiler.batch.Main', @ecj_parms, @$javac_args;
 }
 else
 {
-    my @ecj_args = gen_ecj_opts( \@ARGV );
-    exec '@ECJ@', @ecj_parms, @ecj_args ;
+    my $ecj_args = gen_ecj_opts( \@ARGV );
+    exec '@ECJ@', @ecj_parms, @$ecj_args ;
 }
